buildscript {

    repositories {
        mavenLocal()
        mavenCentral()
        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
    }
    dependencies {

    }
}

def getGitHash = { ->
    def stdout = new ByteArrayOutputStream()
    exec {
        commandLine 'git', 'rev-list', '--count', 'HEAD'
        standardOutput = stdout
    }
    return stdout.toString().trim()
}

allprojects {
    apply plugin: "idea"

    version = '1.0'
    ext {
        appName = "HadalGame"
    }

    repositories {
        mavenLocal()
        mavenCentral()
        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
        maven { url "https://oss.sonatype.org/content/repositories/releases/" }
        maven { url "https://jitpack.io" }
        maven { url "https://mvnrepository.com/artifact/org.bitlet/weupnp" }
    }
}

configure(subprojects) {
    apply plugin: 'java-library'
    sourceCompatibility = 16.0
    compileJava {
        options.incremental = true
    }
}

subprojects {
    version = '0.0.' + getGitHash()
    ext.appName = 'HadalCalm'
    repositories {
        mavenLocal()
        mavenCentral()
        maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
        maven { url 'https://jitpack.io' }
    }
}